[package]
name = "liquid_eng" # the name of the package
version = "1.0.0"    # the current version, obeying semver
authors = ["Petri Bayley <petribayley@gmail.com>"]
crate-type = ["dylib"]
edition = "2021"

[metadata]
resolver = "2"

[lib]
name = "liquid_eng"
crate-type = ["rlib", "dylib"]

[dependencies]
log4rs = "1.2.0"
serde_yaml = "0.9.14"
log = "0.4.17"
glow = "0.11.2"
glutin = "0.30.2"
once_cell = "1.16.0"
winit = "0.27.0"
wgpu = "0.14.2"
uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics" ] }